<resources>
    <string name="app_name">SE App</string>
    // ------------login-------------
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>


    <string name="inventory">Inventory</string>
    <string name="amount">Amount</string>
    <string name="add">Add to Inventory</string>
    <string name="salesP">Sales Point</string>
    <string name="product">Product</string>

    // --------------- Sales Point Creation
    <string name="createSP">Sales Point Creation</string>
    <string name="upNID">Upload NID</string>
    <string name="upImage">Upload Image</string>
    <string name="upTradeLicense">Upload Trade License</string>
    <string name="submit">Submit</string>

    <string name="pname">Point Name</string>
    <string name="nidNo">NID No.</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="executive">Sales Executive</string>
    <string name="logout">Logout</string>
    <string name="attendance">Attendance</string>
    <string name="history">History</string>
    <string name="manageInventory">Manage Inventory</string>
    <string name="showRoute">Show Route</string>
    <string name="notice">Notice</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>